<?xml version="1.0"?>
<package format="2">
	<name>amr_mtt</name>
	<version>1.0.2</version>
	<description>amr_mtt</description>

	<maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
	<maintainer email="devanshu@blackcoffeerobotics.com">Devanshu Sharma</maintainer>
	<maintainer email="angelo@blackcoffeerobotics.com">Angelo Antu</maintainer>
	<maintainer email="s6703016411302@email.kmutnb.ac.th">Phuwaset Sibta</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
